--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -10,3 +10,6 @@
 - title:
   logo-image: ieee.png
   site: https://www.facebook.com/IEEEUMinhoSB/
+- title:
+  logo-image: nebqumbranco.png
+  site: https://www.facebook.com/nebqum/
