--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -1,15 +1,21 @@
 - title:
-  logo-image: necc.png
-  site: http://necc.di.uminho.pt/
+  logo-image: deb.png
+  site: https://www.deb.uminho.pt/
 - title:
-  logo-image: neebum.png
-  site: https://www.facebook.com/Neebum-121385298045015/
+  logo-image: 
+  site: http://aedum.com/
 - title:
   logo-image: NEEGIUM.png
   site: https://www.facebook.com/NEEGIUM/
 - title:
-  logo-image: ieee.png
-  site: https://www.facebook.com/IEEEUMinhoSB/
+  logo-image: AISCUM.png
+  site: https://aissc.dsi.uminho.pt/
 - title:
-  logo-image: nebqumbranco.png
-  site: https://www.facebook.com/nebqum/
+  logo-image: NENUM.png
+  site: https://www.nemum.com/
+- title:
+  logo-image: GACCUM.png
+  site: http://gaccum.weebly.com/
+- title:
+  logo-image: GeoPlanUM.png
+  site: https://geoplanum.weebly.com/
