--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -2,7 +2,7 @@
   logo-image: deb.png
   site: https://www.deb.uminho.pt/
 - title:
-  logo-image: 
+  logo-image:  AEDUM.png
   site: http://aedum.com/
 - title:
   logo-image: NEEGIUM.png
