--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -8,8 +8,8 @@
   logo-image: NEEGIUM.png
   site: https://www.facebook.com/NEEGIUM/
 - title:
-  logo-image: AISCUM.png
-  site: https://aissc.dsi.uminho.pt/
+  logo-image: NEEMAT.png
+  site: https://www.facebook.com/NEEMAT.UMinho/
 - title:
   logo-image: NENUM.png
   site: https://www.nemum.com/
@@ -19,3 +19,6 @@
 - title:
   logo-image: GeoPlanUM.png
   site: https://geoplanum.weebly.com/
+- title:
+  logo-image: AISCUM.png
+  site: https://aissc.dsi.uminho.pt/
