removido nemum e adição da eeum

--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -11,8 +11,8 @@
   logo-image: NEEMAT.png
   site: https://www.facebook.com/NEEMAT.UMinho/
 - title:
-  logo-image: NENUM.png
-  site: https://www.nemum.com/
+  logo-image: eeum.png
+  site: https://www.eng.uminho.pt/pt
 - title:
   logo-image: GACCUM.png
   site: http://gaccum.weebly.com/
