--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -36,6 +36,17 @@ firstweek:
     text:
     speaker: Sara Dias & Inês Braz
     org: <a target="_blank" href="http://gaccum.weebly.com/">GACCUM</a>
+
+  - title: Fusão Nuclear
+    date: 4 de Dezembro
+    place: Tasquinha Bracarense Bar
+    image: activities/fusaonuclear.png
+    typeform:
+    text: "O Natal está a chegar e com ele o espírito de solidariedade para com os mais necessitados. Neste sentido, o CeSIUM, em parceria com vários núcleos da Universidade do Minho e no âmbito do Dezembro Solidário, organizou a Fusão Nuclear! 
+    Esta trata-se de uma festa noturna onde te poderás divertir em conjunto com alunos de outros cursos. Para tal, apenas tens de adquirir o teu cartão da Fusão Nuclear por apenas 2€ e terás direito a 3 finos ou um balde de bebida branca.
+    A festa decorrerá no próximo dia 4 de dezembro, na Tasquinha Bracarense Bar e poderás ainda fazer um depósito de alimentos durante a tarde dos dias 3 e 4 na Tasquinha Bracarense.
+    Contamos contigo para nos ajudar a espalhar a magia do Natal!"
+
   - title: Why Linux?
     date: 5 de Dezembro
     time: 17h
