--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -51,7 +51,7 @@ firstweek:
     date: 5 de Dezembro
     time: 17h
     place: Auditório A2 do DI
-    image: 1.png
+    image: activities/whylinux.png
     typeform:
     text:
     speaker: Carlos Ferreira
