--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -27,76 +27,22 @@ contributions:
 ###############################################################################################
 
 firstweek:
-  - title: "Comunicação e Marketing: Let's Talk"
+  - title: "Dummy Title"
     date: 4 de Dezembro
-    time: 16h30
-    place: Auditório 1.01 da EEG
+    time: 14h15
+    place: top secret location
     image: activities/Marketing.jpg
-    typeform:
-    text:
-    speaker: Sara Dias & Inês Braz
+    typeform: www.google.pt
+    text: Descrição muito ilucidativa da coisa. Coisas. Coisas. Coisas. Coisas. Coisas. Coisas. 
+      Coisas. Coisas. Coisas. Coisas. Coisas. Coisas. Coisas. Coisas. Coisas. Coisas. Coisas. 
+      Coisas. Coisas. Coisas. Coisas. Coisas. Coisas. Coisas. Coisas. Coisas. Coisas. Coisas. 
+      Coisas. Coisas. Coisas. Coisas. Coisas. Coisas. Coisas. Coisas. Coisas. Coisas. Coisas. 
+    speaker: Adolfo Dias
     org: <a target="_blank" href="http://gaccum.weebly.com/">GACCUM</a>
-
-  - title: Fusão Nuclear
-    date: 4 de Dezembro
-    place: Tasquinha Bracarense Bar
-    image: activities/fusaonuclear.png
-    typeform:
-    text: "O Natal está a chegar e com ele o espírito de solidariedade para com os mais necessitados. Neste sentido, o CeSIUM, em parceria com vários núcleos da Universidade do Minho e no âmbito do Dezembro Solidário, organizou a Fusão Nuclear! 
-    Esta trata-se de uma festa noturna onde te poderás divertir em conjunto com alunos de outros cursos. Para tal, apenas tens de adquirir o teu cartão da Fusão Nuclear por apenas 2€ e terás direito a 3 finos ou um balde de bebida branca.
-    A festa decorrerá no próximo dia 4 de dezembro, na Tasquinha Bracarense Bar e poderás ainda fazer um depósito de alimentos durante a tarde dos dias 3 e 4 na Tasquinha Bracarense.
-    Contamos contigo para nos ajudar a espalhar a magia do Natal!"
-
-  - title: Why Linux?
-    date: 5 de Dezembro
-    time: 17h
-    place: Auditório A2 do DI
-    image: activities/whylinux.png
-    typeform:
-    text:
-    speaker: Carlos Ferreira
   
 secondweek:
-  - title: Hour of Code
-    date: 
-    time: 
-    place: 
-    image: 1.png
-    typeform:
-    text:
-    speaker: Carlos Ferreira
 
-  - title: Workshop de Public Speaking
-    date: 11 de Dezembro
-    time: 14h30
-    place: B-lounge da Biblioteca de Azurém
-    image: activities/public.png
-    typeform:
-    text:
-    speaker: Toastmasters
-    org: <a target="_blank" href="https://www.facebook.com/NEEMAT.UMinho/">NEEMAT</a>
 thirdweek:
-  - title: Visita ao Hospital
-    date: 18 de Dezembro
-    time: 15h30 
-    place: Hospital de Braga
-    image: 1.png
-    typeform:
-    text:
-  - title: Visita Oficina de S.José
-    date: 19 de Dezembro
-    time: 14h30 
-    place: Oficina de S.José
-    image: 1.png
-    typeform:
-    text:
-  - title: Visita à Casa da Criança
-    date: 20 de Dezembro
-    time:  
-    place: Casa da Criança de Guimarães
-    image: 1.png
-    typeform:
-    text:
 
 fourthweek:
   
