--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -1,11 +1,12 @@
 contributions:
-  - title: Contribuir em árvores de natal
+  - title: Contribuir em cabazes de natal
     logo-image: christmas-tree.ico
-    text: De modo a envolver e apelar à participação de toda a comunidade académica, desde alunos, funcionários, professores a possíveis visitantes para ajudar quem mais precisa, por toda a Universidade do Minho, poderás encontrar algumas árvores de natal e muitas decorações e enfeites, onde estarão colocados cabazes para recolha de bens, porque por mais pequena que seja a nossa contribuição, todos juntos faremos a diferença.
+    text: De modo a envolver e apelar à participação de toda a comunidade académica, desde alunos, funcionários, professores a possíveis visitantes para ajudar quem mais precisa, por toda a Universidade do Minho, poderás encontrar cabazes, identificados com a iniciativa, para recolha de bens alimentares, peças de vestuário e brinquedos, porque por mais pequena que seja a nossa contribuição, todos juntos faremos a diferença.
 
   - title: Contribuir ao participar nos eventos listados
     logo-image: gift.png
-    text: Ainda de modo a criar um espírito de partilha e de solidariedade entre todos durante este mês, todos os Núcleos, Associações e Secções participantes nesta iniciativa irão também cobrar como entrada para participação nas suas atividades ou num grupo de atividades específico bens alimentares, peças de vestuário e brinquedos que irão posteriormente ser colocados nos cabazes para serem entregues às instituições.
+    text: Ainda de modo a criar um espírito de partilha e de solidariedade entre todos durante este mês, todos os Núcleos, Associações e Secções participantes nesta iniciativa irão também cobrar na participação nas suas atividades, ou num grupo de atividades específico, a doação de bens alimentares, peças de vestuário ou brinquedos num dos cabazes espalhados pela Universidade ou a doação por MB Way ou transferência para uma instituição de solidariedade à escolha. No MB Way já existe a opção de fazer doações em “Ser Solidário”.
+    subtext: Estas são 5 das inúmeras instituições para as quais podem ser feitas as doações nas atividades ao longo de todo o mês de dezembro":"
 
 #corrida:
 #  - title: Corrida Social
